<resources>
    <string name="app_name">Darcrume</string>
    <string name="btnFilms">Films</string>
    <string name="btnChems">Chemistry</string>
    <string name="btnNotes">Notes</string>
    <string name="btnLog">Logbook</string>
    <string name="btnDevelop">Develop Now</string>
    <string name="btnShowFilms">Show Films</string>


    //activity_films strings
    <string name="textBrand">Brand:</string>
    <string name="textName">Name:</string>
    <string name="spinnerText">ISO:</string>

    <string name="radioGroupTypeHeader">Type:</string>
    <string name="radioTypeBW">Black and White</string>
    <string name="radioTypeC41">Color</string>

    <string name="radioGroupExpHeader">Exposures:</string>
    <string name="radioExp24">24 exposures</string>
    <string name="radioExp36">36 exposures</string>


    <string name="buttonAddFilm">Add New Film</string>

    <string name="title_activity_see_films">activity_see_films</string>
    <string name="btnAddFilm">Add new film</string>
    <string name="row1col1">Row1Col1</string>


    //ShowFilmsActivity strings
    <string name="actDev_chem1">Chem 1</string>

    //activity_manage_chems chemRole array
    <string name="actDev_chem2">Chem 2</string>

    //activity_manage_chems chemRole array
    <string name="actDev_chem3">Chem 3</string>

    //activity_manage_chems chemRole array
    <string name="actDev_chem4">Chem 4</string>

    //Values for Timer Activity
    <string name="howToPrep">Prep:\nLoad the film into the development tank.\nDecide on development times by referring to www.digitaltruth.com</string>
    <string name="howToApp">App Settings:\nOn the Develop screen, select your film and chemicals.\nNote that you cannot pause a chemical reaction, so be prepared to complete the entire process before clicking Start.</string>
    <string name="howToDevBW">Development Steps:\nSet the timer, pour in Developer, and click start.\n\nWhen notified, agitate chemistry by inverting the development tank 3-4 times.\n\nWhen the timer stops, pour the Developer into the storage container.\n\nSet the timer according to Stop Bath label instructions, pour in the Stop Bath, and start the timer.\n\nWhen the timer stops, pour the Stop Bath back into the storage container.\n\nSet the timer according to Fixer label instructions, pour in Fixer, and start the timer.\n\nWhen notified, agitate chemistry by inverting the development tank 3-4 times.\n\nWhen the timer stops, pour the Fixer back into the storage container.\n\nRemove the lid of the development tank and rinse thoroughly with clean water.\n\nHang up film to dry. You’re done!\n\n\n</string>
    <string name="howToDevCol">Development Steps:\nSet the timer, pour in Developer, and click start.\n\nWhen notified, agitate chemistry by inverting the development tank 3-4 times.\n\nWhen the timer stops, pour the Developer into the storage container.\n\nSet the timer according to Blix label instructions, pour in the Blix, and start the timer.\n\nWhen the timer stops, pour the Blix back into the storage container.\n\nSet the timer according to Stabilizer label instructions, pour in Stabilizer, and start the timer.\n\nWhen notified, agitate chemistry by inverting the development tank 3-4 times.\n\nWhen the timer stops, pour the Stabilizer back into the storage container.\n\nRemove the lid of the development tank and rinse thoroughly with clean water.\n\nHang up film to dry. You’re done!\n\n\n</string>

    <string-array name="spinnerISOs">
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>125</item>
        <item>200</item>
        <item>400</item>
        <item>800</item>
        <item>1600</item>
    </string-array>
    <string-array name="chemRolesAll">
        <item>Select a Chemistry Role...</item>
        <item>BW Developer</item>
        <item>BW Stop Bath</item>
        <item>BW Fixer</item>
        <item>Color Developer</item>
        <item>Color Blix</item>
        <item>Color Stabilizer</item>
    </string-array>
    <string-array name="chemRolesBW">
        <item>BW Developer</item>
        <item>BW Stop Bath</item>
        <item>BW Fixer</item>
    </string-array>
    <string-array name="chemRolesColor">
        <item>Color Developer</item>
        <item>Color Blix</item>
        <item>Color Stabilizer</item>
    </string-array>

</resources>
