<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme1ColorPrimaryDark"
    tools:context=".Controller_MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnManageFilms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnFilms"
            android:textColor="@color/theme1ColorAccent"
            android:background="@drawable/btn_rounded_corners"/>

        <Button
            android:id="@+id/btnChems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnChems"
            android:textColor="@color/theme1ColorAccent"
            android:background="@drawable/btn_rounded_corners"/>

        <Button
            android:id="@+id/btnNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnNotes"
            android:textColor="@color/theme1ColorAccent"
            android:background="@drawable/btn_rounded_corners"/>

        <Button
            android:id="@+id/btnLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnLog"
            android:textColor="@color/theme1ColorAccent"
            android:background="@drawable/btn_rounded_corners"/>

        <Button
            android:id="@+id/btnDevelop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnDevelop"
            android:textColor="@color/theme1ColorAccent"
            android:background="@drawable/btn_rounded_corners"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pickledebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text=""
            android:textColor="@color/theme1ColorAccent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>